[package]
name = "llvmlite-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = { version = "0.8.0", optional = true }
once_cell = { version = "1.17.1", optional = true }

[features]
binding = ["libloading", "once_cell"]